# CMakeDummy

./: .gitignore  CMakeLists.txt  main.cpp
AtlasModule/: CMakeLists.txt
AtlasModule/Atl_Headers/: Person.hpp
AtlasModule/Sources/: Person.cpp
GeminiModule/: CMakeLists.txt
GeminiModule/Gem_Headers/: Wolf.hpp
GeminiModule/Sources/: Wolf.cpp
Testing/: CMakeLists.txt  PersonTest.cpp  WolfTest.cpp
